--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
-    <string name="app_name">moodvie</string>
+    <string name="app_name">MOODVIE</string>
+    <string name="login_header">LOGIN</string>
+    <string name="login_button_text">Login To My Account</string>
+    <string name="login_no_account">Dont have an account? </string>
+    <string name="login_create_account"><u>Create one here.</u></string>
+    <string name="login_remember">Remember Me?</string>
+    <string name="prompt_name">Name</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="create_account_button">Create Your Account</string>
+    <string name="image_description">Moodvie Logo</string>
 </resources>
