--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="create_account_button">Create Your Account</string>
     <string name="image_description">Moodvie Logo</string>
     <string name="title_activity_face_scan">faceScan</string>
-    <string name="take_picture_button">Take Picture</string>
+    <string name="take_picture_button">Open Camera</string>
     <string name="scan_header">Mood Scanner</string>
+    <string name="use_this">Use Image</string>
+
 </resources>
