--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="login_create_account"><u>Create one here.</u></string>
     <string name="login_remember">Remember Me?</string>
     <string name="prompt_name">Name</string>
-    <string name="prompt_email">Email</string>
+    <string name="prompt_username">Username</string>
     <string name="prompt_password">Password</string>
     <string name="create_account_button">Create Your Account</string>
     <string name="image_description">Moodvie Logo</string>
