--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="search_for_movie">Search for Movie</string>
     <string name="face_scan">Face Scan</string>
     <string name="scan_movie">Scan Movie</string>
+    <string name="upcitemdbAPI">https://api.upcitemdb.com/prod/trial/lookup?upc=%s</string>
+    <string name="tmdbAPI"><![CDATA[https://api.themoviedb.org/3/search/movie?api_key=41c71716931eb4f4b0f331c491551a7b&query=%s]]></string>
 
 </resources>
