--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,8 @@
     <string name="face_scan">Face Scan</string>
     <string name="scan_movie">Scan Movie</string>
     <string name="upcitemdbAPI">https://api.upcitemdb.com/prod/trial/lookup?upc=%s</string>
-    <string name="tmdbAPI"><![CDATA[https://api.themoviedb.org/3/search/movie?api_key=41c71716931eb4f4b0f331c491551a7b&query=%s]]></string>
+    <string name="tmdbAPIGetID"><![CDATA[https://api.themoviedb.org/3/search/movie?api_key=41c71716931eb4f4b0f331c491551a7b&query=%s]]></string>
+    <string name="tmdbAPIMovieInformation"><![CDATA[https://api.themoviedb.org/3/movie/%s?api_key=41c71716931eb4f4b0f331c491551a7b&append_to_response=credits]]></string>
     <string name="movie_title">Movie Title</string>
     <string name="starring">Starring:</string>
     <string name="movie_synopsis">Description</string>
