--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,12 @@
     <string name="movie_synopsis">Description</string>
     <string name="cast_members">Cast Members</string>
     <string name="synopsis_title">Synopsis:</string>
+    <string name="alert_delete_movie">Delete %s</string>
+    <string name="delete_movie_alert_message">Are you sure you want to delete this movie?</string>
+    <string name="confirm_message">Confirm</string>
+    <string name="already_own_movie">You Already Own This Movie</string>
+    <string name="added_movie">Added Movie Successfully</string>
+    <string name="failed_to_delete_movie">Failed to delete %s</string>
+    <string name="successfully_deleted_movie">%s has been deleted.</string>
+    <string name="failed_to_add_movie">Failed to add movie to your stored list</string>
 </resources>
