Some bug fixes and code changes; - Fixed the bug that froze the program after accepting the camera permissions on the splash screen (it now continues after granting or denying them)
- The person class is now able to be accessed across all activities through Serialization

- Overlapped the delete and add movie buttons on the movie page since one or the other will get removed depending on certain scenarios (keeps a consistent layout)

- Added some more comments to explain the code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,8 @@
     <string name="failed_to_delete_movie">Failed to delete %s</string>
     <string name="successfully_deleted_movie">%s has been deleted.</string>
     <string name="failed_to_add_movie">Failed to add movie to your stored list</string>
+    <string name="fill_in_all_fields">Fill in all fields to continue.</string>
+    <string name="account_doesnt_exist">This Account Doesn\'t Exist</string>
+    <string name="auth_failed">Authentication Failed</string>
+    <string name="auth_success">Authentication Successful</string>
 </resources>
