- Various bug fixes - Comment additions and changes - Added in the ability to change the username and password

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,9 @@
     <string name="account_doesnt_exist">This Account Doesn\'t Exist</string>
     <string name="auth_failed">Authentication Failed</string>
     <string name="auth_success">Authentication Successful</string>
+    <string name="change_username">Change Username</string>
+    <string name="change_password">Change Password</string>
+    <string name="change_flag">change %s</string>
+    <string name="cancel">Cancel</string>
+    <string name="no_camera_available">No Camera Available</string>
 </resources>
