--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="change_flag">change %s</string>
     <string name="cancel">Cancel</string>
     <string name="no_camera_available">No Camera Available</string>
+    <string name="logging_out">Logging out..</string>
 </resources>
