--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,7 +52,7 @@
     <string name="failed_to_create_account">Failed to create your account.</string>
     <string name="image_path">https://image.tmdb.org/t/p/w185%s</string>
     <string name="retake_image">Retake Image</string>
-    <string name="smile_probability">Smile Probability: %s</string>
+    <string name="smile_probability">Smile Probability: %s\%%</string>
     <string name="recommended_movie_genre">Recommended Movie Genre: %s</string>
     <string name="title_activity_side_menu">Moodvie</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
